--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,13 @@
 {
-    "name": "tejasext/hello-world",
+    "name": "bashir/hello-world",
 	"type": "yii2-extension",
 	"description": "A PHP class to generate Hello world",
-	"keywords": ["yii2","extension","helloworld","tejas"],
+	"keywords": ["yii2","extension","helloworld","bashir"],
 	 "license": "GPL-2.0",
     "authors": [
         {
-            "name": "Mithilesh Kumar",
-            "email": "mkphp2@gmail.com",
+            "name": "Mohd Bashir",
+            "email": "mohdbashir06@gmail.com",
             "homepage": "http://18thtechnology.com/"
         }
     ],
